<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".app.about.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_creator_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:paddingBottom="50dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="25dp"
                    android:src="@drawable/angelia_widjaja"
                    tools:src="@drawable/angelia_widjaja" />

                <TextView
                    android:id="@+id/tv_creator_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textIsSelectable="true"
                    android:text="@string/creator_name"/>

                <TextView
                    android:id="@+id/tv_craetor_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent"
                    android:textIsSelectable="true"
                    android:text="@string/creator_phone"/>

                <TextView
                    android:id="@+id/tv_craetor_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textIsSelectable="true"
                    android:text="@string/creator_email"/>

            </LinearLayout>

            <TextView
                style="@style/HeadlineTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="App Description"
                android:paddingStart="16dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_app_description"
                style="@style/DefaultDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/app_description"/>

            <TextView
                style="@style/DefaultSourceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:singleLine="false"
                android:maxLines="3"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/info_data"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>