<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.detail.DetailCoWorkerActivity"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_worker_photo"
                        android:layout_width="130dp"
                        android:layout_height="140dp"
                        tools:src="@drawable/angelia_widjaja"/>

                    <TextView
                        android:id="@+id/tv_photo_source"
                        style="@style/DefaultSourceText"
                        android:background="@color/colorWhite"
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Source: www.testsource.co.idcdjcncjecnje"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/worker_id_title"
                    style="@style/DefaultTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/worker_id"
                    app:layout_constraintLeft_toRightOf="@id/layout_photo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_worker_id"/>

                <TextView
                    android:id="@+id/tv_worker_id"
                    style="@style/DefaultDataText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintLeft_toRightOf="@id/layout_photo"
                    app:layout_constraintTop_toBottomOf="@id/worker_id_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/worker_name_title"
                    tools:text="GMF-00025-IT"/>

                <TextView
                    android:id="@+id/worker_name_title"
                    style="@style/DefaultTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/full_name"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintLeft_toRightOf="@id/layout_photo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_worker_id"/>

                <TextView
                    android:id="@+id/tv_worker_name"
                    style="@style/DefaultDataText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintLeft_toRightOf="@id/layout_photo"
                    app:layout_constraintTop_toBottomOf="@id/worker_name_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/division_title"
                    tools:text="Angelia Widjaja"/>

                <TextView
                    android:id="@+id/division_title"
                    style="@style/DefaultTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/division"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintLeft_toRightOf="@id/layout_photo"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_worker_name"/>

                <TextView
                    android:id="@+id/tv_division"
                    style="@style/DefaultDataText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintLeft_toRightOf="@id/layout_photo"
                    app:layout_constraintTop_toBottomOf="@id/division_title"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Information Technology"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/DefaultTitleText"
                        android:layout_marginEnd="16dp"
                        android:text="Joined Since" />

                    <TextView
                        android:id="@+id/tv_joined_since"
                        style="@style/DefaultDataText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="25 Sep 20" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        style="@style/DefaultTitleText"
                        android:text="@string/office_location" />

                    <TextView
                        android:id="@+id/tv_office_location"
                        style="@style/DefaultDataText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="MH Thamrin" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        style="@style/DefaultTitleText"
                        android:text="@string/floor_location" />

                    <TextView
                        android:id="@+id/tv_floor_location"
                        style="@style/DefaultDataText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="7" />

                </TableRow>

            </TableLayout>

            <TextView
                style="@style/DefaultTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_roles"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_job_roles"
                style="@style/DefaultDataText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text=" Test 1\n Test 2"/>

            <TextView
                android:id="@+id/tv_job_source"
                style="@style/DefaultSourceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Source: www.testsource.co.id"/>

            <TextView
                style="@style/HeadlineTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Person"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/phone_title"
                            style="@style/DefaultTitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Phone Number"
                            android:layout_alignParentTop="true"/>

                        <TextView
                            android:id="@+id/tv_phone_number"
                            style="@style/DefaultDataText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_below="@+id/phone_title"
                            tools:text="081289693035" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/btn_call_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_phone_call"
                        android:padding="8dp"
                        android:background="@android:color/transparent"
                        android:layout_alignParentEnd="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:orientation="vertical"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/email_title"
                            style="@style/DefaultTitleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_phone_number"
                            android:text="Email" />

                        <TextView
                            android:id="@+id/tv_email"
                            style="@style/DefaultDataText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_below="@id/email_title"
                            android:text="angelia.widjaja@coworkers.com" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/btn_send_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"
                        android:padding="8dp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>